Bug 1766058 - Avoid mixing log output. r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D179725